Fixed alignment issue
The search button and the search input field were not aligning properly. This has been fixed by flexing them

Fixed text within button also not being properly aligned by adjusting the padding and setting a width to the buttons instead

--- a/src/pages/ProjectDashboard/SearchBar/SearchBar.css
+++ b/src/pages/ProjectDashboard/SearchBar/SearchBar.css
@@ -9,6 +9,7 @@
 
 .SearchBar__Input,
 .SearchBar_Buttons{
+    display: flex;
     width: 50%;
     padding: 25px
 }
@@ -23,7 +24,7 @@
     background-color: rgb(0,48,143,0.8);
     color: white;
     font-size: 18px;
-    padding: 15px;
+    padding: 10px;
     border-radius: 5px;
     height: 50px;
 }
@@ -44,11 +45,19 @@
     height: 30px;
 }
 
+.SearchBar_Buttons{
+    justify-content: end;
+}
+.SearchBar_Buttons button {
+    width: 100px;
+}
+
 .SearchBar__Input input[type=text]:focus{
     outline: none;
 }
 
 .SearchBar__Input button {
     border-radius: 0 5px 5px 0;
+    width: 50px;
 }
 
